fixed spacing

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -690,5 +690,5 @@ div.tier-card h2 {
 
 .inline-icon {
   max-height: 21px;
-  margin: 0 0.2rem;
+  margin: 0 0.4rem;
 }
